--- a/src/app/common.css
+++ b/src/app/common.css
@@ -5,10 +5,12 @@
 * {
   scroll-behavior: smooth !important;
 }
+body , html {
+  overflow-x: hidden;
+}
 /* nav bar bg  */
 .nav_bar_bg {
   background: rgba(255, 255, 255, 0.1);
   -webkit-backdrop-filter: blur(26px);
   backdrop-filter: blur(26px);
 }
-
