--- a/src/app/common.css
+++ b/src/app/common.css
@@ -5,6 +5,23 @@
 * {
   scroll-behavior: smooth !important;
 }
-body , html {
+body,
+html {
   overflow-x: hidden;
+}
+
+/* key frame  */
+.backtotop_animation {
+  animation: toparrow 2s ease-in-out infinite;
+}
+@keyframes toparrow {
+  0% {
+    transform: translateY(-10px);
+  }
+  50% {
+    transform: translateY(0);
+  }
+  100% {
+    transform: translateY(-10px);
+  }
 }
